updated pagination and meta info